$Id$                       -*-text-*-


Revision history for Net::DNS               
=============================

*** 0.63, UNRELEASED

Fix rt.cpan.org #32937: 5.11 introduces new warning on uc(undef)

  The patch supplied fixes for methods where undefined arguments were
  likely. For methods where undefined arguments don't make the warning
  will be printed.


Fix rt.cpan.org #32147: Default LocalAddr broken in Net::DNS::Nameserver 0.62

Listen on the default address if LocalAddr not defined.

Fix rt.cpan.org #30316 Fixes in assertion routines.

  Packet parsing routines are now in an eval loop that catches
  assertion failures. Also continued work on the functions that parse
  the packet data only when needed. That should give a bit of speed
  improvement.


Bug: mbox-dname and txt-dname were not allowed to be empty in the RP RR.
   Fix by Peter Koch


*** 0.62, 28 December 2007

Features: Move of some functionality out of the Packet to the Question
   and RR classes; parsing of elements in the packet is now performed
   by calling the appropriate subclasses.

   New methods were introduced:
   * Net::DNS::Packet->parse()
   * Net::DNS::RR->parse()
   * Net::DNS::Question->parse()

   The Packet class now defers parsing of authority/additional until
   their content is really needed. This should cause a bit of
   performance improvement.

   Dick Franks is acknowledged for this Good Work (TM).

Feature: the Net::DNS::Packet's answersize() method will from now on
    ignore its arguments and just return the size of the packet.

Feature: The Net::DNS::RR->new() method used to call
    Net::DNS::RR->new_from_data() whenever called with the appropriate
    combination of arguments. That (undocumented) behavior has been deprecated.
    Use Net::DNS::RR->new_from_data() directly if you depended on that.

Feature: Net::DNS::Packets unique_push now ignores the TTL in
    comparison of uniqueness, this is closer to the intend of
    RFC2181, but not yet fully compliant.